kubernetes/main/apps/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  labels:
    alerts.nidr0x.win/enabled: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
        alerts.nidr0x.win/enabled: "true"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.29.1-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: freshrss-data
          persistentVolumeClaim:
            claimName: freshrss-data
