kubernetes/main/apps/freshrss/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: postgres
      port: 5435
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: freshrss-cnpg-main-pooler-rw
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.10
